fixed editing menu button from being cutoff when book card is not large enough

--- a/apps/books/static/css/book_detail.scss
+++ b/apps/books/static/css/book_detail.scss
@@ -8,8 +8,13 @@
     left: -6.5rem;
     transform: scale(0);
     transition: transform 0.15s;
+    z-index: 1000;
 }
 
 .editing-menu.active {
     transform: scale(1);
+}
+
+article.card.block {
+    overflow: visible;
 }
